--- a/src/plugins/v2ray/CMakeLists.txt
+++ b/src/plugins/v2ray/CMakeLists.txt
@@ -106,4 +106,4 @@ endfunction()
 qv2ray_internal_add_v2ray_plugin(QvPlugin-V2RayRustSupport "V2RayRustPlugin" V2RayRust)
 qv2ray_internal_add_v2ray_plugin(QvPlugin-V2Ray4Support "V2Ray4Plugin" V2Ray)
 qv2ray_internal_add_v2ray_plugin(QvPlugin-V2Ray5Support "V2Ray5Plugin" V2Ray5)
-qv2ray_internal_add_v2ray_plugin(QvPlugin-V2RayGoSupport "V2RayGoPlugin" V2RayGo)
+qv2ray_internal_add_v2ray_plugin(QvPlugin-V2RaySNSupport "V2RaySNPlugin" V2RaySN)
