remove debian unstable for foreign architectures

--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -87,7 +87,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        distro: [stable, unstable]
+        distro: [stable]
         arch: [arm64, armhf, mips64el]
     needs: check_commit_msg
     if: ${{ !contains( needs.check_commit_msg.outputs.commit_message, '!DEB') }}
