--- a/.github/workflows/build-qv2ray-qt6.yml
+++ b/.github/workflows/build-qv2ray-qt6.yml
@@ -25,7 +25,7 @@ jobs:
     if: ${{ !contains( needs.check_commit_msg.outputs.commit_message, '!QT6') }}
     strategy:
       matrix:
-        platform: [ubuntu-20.04, windows-latest]
+        platform: [ubuntu-20.04, windows-latest, macos-latest]
         build_type: [RelWithDebInfo, Release]
         qt_version: [6.3.0]
         include:
@@ -47,7 +47,7 @@ jobs:
       - name: Checking out sources
         uses: actions/checkout@v2
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
       # =========================================================================================================
       - name: Install MSVC compiler
         if: matrix.platform == 'windows-latest'
