:green_heart: drop support for old linux system since ubuntu jammy released

--- a/.github/workflows/build-qv2ray-cmake.yml
+++ b/.github/workflows/build-qv2ray-cmake.yml
@@ -172,18 +172,8 @@ jobs:
         run: |
           cd build
           cd AppDir
-          mkdir -p ./usr/{lib,optional}/
-          mkdir -p ./usr/optional/libstdc++/
-          mkdir -p ./usr/optional/libgcc_s/
-          mkdir -p ./usr/plugins/platforminputcontexts/
-          wget -c https://github.com/darealshinji/AppImageKit-checkrt/releases/download/continuous/AppRun-patched-x86_64 -O AppRun
-          wget -c https://github.com/darealshinji/AppImageKit-checkrt/releases/download/continuous/exec-x86_64.so -O ./usr/optional/exec.so
-          wget https://github.com/Qv2ray/qt-pkg/releases/download/bruh/libfcitx5platforminputcontextplugin.so -O ./usr/plugins/platforminputcontexts/libfcitx5platforminputcontextplugin.so
-          cp -fv /usr/lib/x86_64-linux-gnu/libstdc++.so.6 ./usr/optional/libstdc++/
-          cp -fv /lib/x86_64-linux-gnu/libgcc_s.so.1 ./usr/optional/libgcc_s/
+          mkdir -p ./usr/lib/
           cp -fv /usr/lib/x86_64-linux-gnu/{libssl.so.3,libcrypto.so.3} ./usr/lib/
-          cp -fv /usr/lib/x86_64-linux-gnu/qt5/plugins/platforminputcontexts/libfcitxplatforminputcontextplugin.so ./usr/plugins/platforminputcontexts/
-          chmod a+x AppRun
           cd ..
           wget https://github.com/probonopd/linuxdeployqt/releases/download/6/linuxdeployqt-6-x86_64.AppImage
           chmod +x ./linuxdeployqt-6-x86_64.AppImage
