--- a/.github/workflows/build-qv2ray-cmake.yml
+++ b/.github/workflows/build-qv2ray-cmake.yml
@@ -85,7 +85,7 @@ jobs:
               libprotobuf-dev protobuf-compiler protobuf-c-compiler libgrpc++-dev protobuf-compiler-grpc \
               ninja-build \
               fcitx-frontend-qt5 \
-              libcurl4-openssl-dev libssl-dev
+              libcurl4-openssl-dev libssl-dev fuse
       # --------------------------------------------------------
       - name: macOS - ${{ matrix.qt_version }} - Build preparation - Install Packages
         if: matrix.platform == 'macos-latest'
