:rocket: add mesa-common-dev to build-packages

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -36,6 +36,7 @@ parts:
       - protobuf-compiler-grpc
       - pkg-config
       - libcurl4-openssl-dev
+      - mesa-common-dev
     stage-packages:
       - libgcc1
       - libstdc++6
