:rocket: add libgles-dev to build-packages

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -37,6 +37,7 @@ parts:
       - pkg-config
       - libcurl4-openssl-dev
       - mesa-common-dev
+      - libgles-dev
     stage-packages:
       - libgcc1
       - libstdc++6
