:rocket: using relative path for apps.qv2ray.command

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,7 +8,7 @@ confinement: strict
 
 apps:
   qv2ray:
-    command: /usr/bin/qv2ray
+    command: usr/bin/qv2ray
     extensions:
       - kde-neon
     plugs:
