--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -56,6 +56,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: "recursive"
+      - uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.DEBIAN_REPO_TOKEN }}
       - name: Install build dependencies
         run: |
           apt-get install -y build-essential devscripts debhelper ninja-build libgrpc++-dev libprotobuf-dev protobuf-compiler-grpc qtbase5-dev qttools5-dev cmake pkg-config qtdeclarative5-dev libcurl4-openssl-dev libqt5svg5-dev
@@ -150,28 +153,14 @@ jobs:
           sudo apt-get install reprepro
           echo ${{ secrets.DEBIAN_REPO_KEY }} | base64 -d > private.key
           gpg --import private.key
-      - name: Setup Repository
-        if: github.event_name == 'release' && !contains(github.ref, 'alpha') && !contains(github.ref, 'beta') && !contains(github.ref, 'rc') && !contains(github.ref, 'pre')
-        run: |
-          git clone https://github.com/Qv2ray/debian.git
-          cd debian
-          git config --local user.name "${{ github.actor }}"
-          git config --local user.email "${{ github.actor }}@users.noreply.github.com"
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.DEBIAN_REPO_TOKEN }}@github.com/Qv2ray/debian.git
-          reprepro --delete clearvanished
-          find $GITHUB_WORKSPACE/packages -type f -name *.deb -exec bash -c 'reprepro includedeb $(echo "$1" | grep -Po "(?<=-1).*(?=1_)") "$1"' bash {} \;
-          git add -A
-          git commit -am 'update'
-          git push origin master
       - name: Setup Repository (development branch)
         if: github.event_name != 'release'
         run: |
-          git clone https://github.com/Qv2ray/debian-dev.git
+          git clone git@github.com:Qv2ray/debian-dev.git
           cd debian-dev
           git config --local user.name "${{ github.actor }}"
           git config --local user.email "${{ github.actor }}@users.noreply.github.com"
           reprepro --delete clearvanished
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.DEBIAN_REPO_TOKEN }}@github.com/Qv2ray/debian-dev.git
           find $GITHUB_WORKSPACE/packages -type f -name *.deb -exec bash -c 'reprepro includedeb $(echo "$1" | grep -Po "(?<=-1).*(?=1_)") "$1"' bash {} \;
           git add -A
           git commit -am 'update'
